--- a/workshop/VulnerableAppTwo/vuln.ini
+++ b/workshop/VulnerableAppTwo/vuln.ini
@@ -42,4 +42,4 @@ allow_anonymous_access = true
 
 [third_party_services]
 ; Example PAT token 
-gh_pat_token="ghp_abcdefghijklmnopqrstuvwxyzABCD012345"
+;gh_pat_token="ghp_abcdefghijklmnopqrstuvwxyzABCD012345"
